--- a/estilo.css
+++ b/estilo.css
@@ -1,16 +1,65 @@
+*{
+    font-family:Helvetica, sans-serif;
+}
+
 body{
     width: 100%;
     height: 100vh;
     justify-content: center;
     display: flex;
+    align-items: center;
+}
+.it{
+    margin-top: 30px;
+    text-align: center;
+    color: slateblue;
+    font-weight: bold;
+   
+}
+form{
+    margin: 0 auto;
+    /* border: 2px solid green; */
+    width: 90%;
 }
 main{
     width: 720px;
-    height: 512px;
+    height: 520px;
     margin: 0 auto;
-    text-align: center;
-    display: flex;
+    text-align: left;
     align-items: center;
     justify-content: center;
-    border: 2px solid red;
+    /* border: 2px solid red; */
+}
+input{
+    width: 97%;
+    padding: 10px;
+    font-size: 15px;
+    border-radius: 20px;
+    border: 1px solid slateblue;
+}
+.bt{
+    margin-top: 10px;
+    width: 100%;
+    padding: 9px;
+    font-size: 17px;
+    border-radius: 20px;
+    border: 0px;
+    background-color: slateblue;
+    color: white;
+    transition: 0.5s;
+}
+.bt:hover{
+    background-color: blueviolet;
+}
+h1{
+    text-align: center;
+    font-size: 40px;
+    color: slateblue;
+}
+p{
+    font-size: 20px;
+}
+.result{
+    margin-top: 20px;
+    text-align: center;
 }
